--- a/spok.html
+++ b/spok.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SPOK | Share the wheel, let nature heal.</title>
-    <link rel="stylesheet" href="spok.css" />
+    <link rel="stylesheet" href="SPOK/spok.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap"
       rel="stylesheet"
@@ -78,3 +78,4 @@
     </footer>
   </body>
 </html>
+
