--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section class="hero">
       <div class="container">
         <div class="hero-content">
-          <img src="spok logo small.png" alt="SPOK Logo" class="hero-logo">
+          <img src="images/spok logo small.png" alt="SPOK Logo" class="hero-logo">
           <p class="subtitle">—Share the wheel, let nature heal.</p>
           <div class="hero-btns">
             <a href="#browse-section" class="btn-main">Find Your Ride</a>
@@ -280,15 +280,15 @@
 const localImages = {
     'tier1': {
         title: 'Standard Commuter Bike',
-        path: 'teir 1.png' // Update to your filename
+        path: 'images/teir 1.png' // Update to your filename
     },
     'tier2': {
         title: 'High-Performance Mountain Bike',
-        path: 'teir 2 cycle.png' // Update to your filename
+        path: 'images/teir 2 cycle.png' // Update to your filename
     },
     'tier3': {
         title: 'Premium Electric Cycle',
-        path: 'teir 3 cycle.png' // Update to your filename
+        path: 'images/teir 3 cycle.png' // Update to your filename
     }
 };
 
@@ -348,3 +348,4 @@ function viewCycle(tierKey) {
     </script>
   </body>
 </html>
+
